Prettified content, fixed z-index

--- a/prototype/css/privacy.css
+++ b/prototype/css/privacy.css
@@ -1,16 +1,19 @@
 /* CSS file for all the elements on the Privacy Shortcuts page */
 
+body {
+    background-color: #EEEEEE;
+}
+
 #container {
     width: 600px;
 }
 
 #content {
-    background-color: #EEEEEE;
-    height: 800px;
     width: 600px;
     float:left;
 }
 
+/* The outer box that is drawn. */
 #snap-outer {
     width: 80%;
     height: 300px;
@@ -20,8 +23,11 @@
     border-style: solid;
     border-width: 8px;
     border-color: #3B5998;
+    z-index: -1;
 }
 
+/* The inner box that the elements snap to.
+ * Do not change these values unless you know what you're doing! */
 #snap-inner {
     width: 90%;
     height: 80%;
@@ -31,6 +37,20 @@
     margin-left: auto;
     margin-right: auto;
     vertical-align: middle;
+    z-index: -1;
+}
+
+#update-text {
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    text-align: center;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+    font-weight: 300;
+    font-size: 18px;
+    font-weight: bold;
+    color: #3B5998;
 }
 
 #circle {
@@ -53,5 +73,5 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    z-index: 999;
+    position: relative;
 }
